--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,11 +5,19 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
            version="3.0">
     <servlet>
+        <!-- 类名称 类路径-->
         <servlet-name>Servlet</servlet-name>
         <servlet-class>cai.test.Servlet</servlet-class>
     </servlet>
+    <!--定义一个映射-->
     <servlet-mapping>
         <servlet-name>Servlet</servlet-name>
+        <!--一个URL，相对于web应用上文根的路径-->
         <url-pattern>/slt</url-pattern>
     </servlet-mapping>
+    <!--添加监听器 listener-->
+    <listener>
+        <listener-class>cai.test.CounterListener</listener-class>
+    </listener>
+    
 </web-app>
